Page MenuHome GnuPG

pinentry-gtk2: ESC not handled
Closed, ResolvedPublic

Description

In pinentry-gtk2, the "ESC" key is not handled correctly (it's currently
completely ignored).

ESC should dismiss the dialog and/or be equivalent to cancel (when handling
CONFIRM).

The attached patch fixes this behavior, making pinentry-gtk2 functionally
equivalent to pinentry-gtk (where this behavior was correctly handled).

See:

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=516489

for an external report.

Related Objects

Event Timeline

Any word on this? It would be nice to see something like this merged.

On 12/02/2014 10:14 PM, Daniel Kahn Gillmor via BTS wrote:

Daniel Kahn Gillmor <dkg@fifthhorseman.net> added the comment:

Any word on this? It would be nice to see something like this merged.

It would be nice, indeed.
I've been using a custom-built pinentry this patch since 2012.

Just pushed commit 9d2d8b6 which is the patch with some modification to avoid
gcc warnings. Will go into 0.9.2

Thanks.

neal removed a project: Restricted Project.May 16 2015, 6:41 PM
neal added a subscriber: neal.

This works for me with Werner's patch. Closing.

neal claimed this task.