gtk: Make Escape key work.

* gtk+-2/pinentry-gtk-2.c: Include gdk/gdkkeysyms.h.
(enter_callback): Pass confirm_value_t to button_clicked.
(confirm_button_clicked): Use confirm_value_t cast.
(cancel_callback): New.
(create_window): Add accelerator for the Escape key.
--

GnuPG-bug-id: 1453

Original patch slighty modified by wk.